# poc-copilot-auto-agents

./: .gitignore  README.md  pyproject.toml  server.js
.github/: copilot-instructions.md
.github/agents/: plan-to-json.agent.md  plan.agent.md
plan/architecture/: README.md  class_structure.eraserdiagram  data_model.eraserdiagram  diagram.eraserdiagram  sequence_flow.eraserdiagram
plan/out_doc/: VALET_PARKING_GENERATED_FILES.md  digital_special_calculator_plan.json  digital_special_calculator_plan.md  valet_parking_entities_schema.json  valet_parking_reservation_plan.json  valet_parking_reservation_plan.md
src/calculator/: __init__.py  exceptions.py
src/calculator/core/: __init__.py  calculator.py  math_operations.py
src/valet_parking/: __init__.py  config.py  exceptions.py
src/valet_parking.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/valet_parking/core/: __init__.py  qr_generator.py  reservation_service.py  time_calculator.py
src/valet_parking/models/: __init__.py  parking.py  reservation.py
src/valet_parking/storage/: __init__.py  in_memory_parking_repository.py  in_memory_repository.py  parking_repository.py  repository.py
src/valet_parking/utils/: __init__.py  formatters.py  validators.py
tests/: conftest.py
tests/integration/: test_reservation_flow.py
tests/unit/calculator/: test_calculator.py
tests/unit/core/: test_qr_generator.py  test_reservation_service.py  test_time_calculator.py
tests/unit/models/: test_parking.py  test_reservation.py
tests/unit/storage/: test_in_memory_parking_repository.py  test_in_memory_repository.py
tests/unit/utils/: test_formatters.py  test_validators.py
web/: index.html  styles.css
